<resources>
    <string name="app_name">Spring Shopping</string>

    <!--Menu Drawer -->
    <string name="menu_drawe_sair">Sair</string>
    <string name="menu_cadastro_itens_compra">Cadastro Itens</string>
    <string name="menu_drawe_minhas_compras">Minhas Compras</string>
    <string name="menu_cadastro_categorias">Cadastro Categorias</string>
    <string name="menu_drawe_minha_conta">Minha Conta</string>
    <string name="menu_drawe_home">Home</string>

    <!--Tela principal-->
    <string name="toogle_open">Open</string>
    <string name="toogle_close">Close</string>

    <!--Tela usuário cadastro Perfil-->
    <string name="usuario_cadastro_nome">Nome</string>
    <string name="usuario_cadastro_email">Email</string>
    <string name="usuario_cadastro_senha">Senha</string>
    <string name="usuario_cadastro_btn_cadastrar">Cadastrar</string>
    <string name="titulo_tela_cadastro">Cadastro de Usuário</string>

    <!--Tela login-->
    <string name="usuario_login_entrar">Entrar</string>
    <string name="usuario_login_titulo">Login</string>

    <!--    Tela Perfil-->
    <string name="usuario_perfil_titulo">Bem vindo!</string>
    <string name="usuario_perfil_sobrenome">Sobrenome</string>
    <string name="usuario_perfil_renda_familiar">Renda Familiar</string>
    <string name="usuario_perfil_numero_dependentes">Número Dependentes</string>
    <string name="usuario_perfil_btn_atualizar">ATUALIZAR</string>

<!--    Tela Item Cadastro-->
    <string name="cadastro_produto_nome">Nome</string>
    <string name="cadastro_produto_quantidade">Quantidade</string>
    <string name="cadastro_produto_unidade">Unidade</string>
    <string name="cadastro_produto_preco">Preço</string>
    <string name="cadastro_produto_categoria">Categoria</string>
    <string-array name="categorias">
        <item>Bebidas</item>
        <item>Carnes</item>
        <item>Frios</item>
        <item>Frutas/Verduras</item>
        <item>Limpeza</item>
        <item>Higiene Pessoal</item>
    </string-array>
    <string-array name="unidade">
        <item>Unidade</item>
        <item>Dúzia</item>
        <item>Litro</item>
        <item>Kg</item>
        <item>Caixa</item>
        <item>Pacote</item>
    </string-array>

<!--    Tela Cadastrar categoria-->
    <string name="cadastrar_categoria_btn_cadastrar">Cadastrar</string>
    <string name="cadastrar_categoria_nome_categoria">Nome Categoria</string>

<!--    Tela Venda Produtos-->
    <string name="venda_produtos_titulo">Produto</string>
    <string name="venda_produtos_produtos">Cerveja Stella Artois</string>
    <string name="venda_produtos_preco">R$ 29,90</string>
    <string name="compra_produto_btn_comprar">Comprar</string>
    <string name="compra_produto_txt_descricao">Descrição</string>
    <string name="compra_produto_quantidade">Quantidade</string>

</resources>