<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/menu_drawe_home"
        android:icon="@drawable/ic_menu_home"/>

    <item android:id="@+id/nav_account"
        android:title="@string/menu_drawe_minha_conta"
        android:icon="@drawable/ic_menu_user_black"/>

    <item android:id="@+id/nav_cadastro_categorias"
        android:title="@string/menu_cadastro_categorias"
        android:icon="@drawable/ic_menu_category_black"/>

    <item android:id="@+id/nav_cadastro_itens"
        android:title="@string/menu_cadastro_itens_compra"
        android:icon="@drawable/ic_menu_cart"/>

    <item android:id="@+id/nav_logout"
        android:title="@string/menu_drawe_sair"
        android:icon="@drawable/ic_menu_logout"/>

</menu>